--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^5.1.3",
     "express": "^4.17.2",
     "firebase": "^9.6.1",
+    "font-awesome": "^4.7.0",
     "html2canvas": "^1.0.0-rc.7",
     "jquery": "^3.6.0",
     "jspdf": "^2.5.1",
